--- a/DesertSSH/WebContent/css/style.css
+++ b/DesertSSH/WebContent/css/style.css
@@ -5,7 +5,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
 html, body{
-  	font-family: 'Open Sans', sans-serif;
+  	font-family: 'Open Sans', sans-serif,Î¢ÈíÑÅºÚ;
     font-size: 100%;
   	background:#ff8db2;
 }
@@ -1052,7 +1052,7 @@ i.white-cart1{
 
 /*--register--*/
 .register{
-	padding:6em 0 5em 0;
+	padding:3em 0em 5em 0;
 }
 .register-top-grid h3, .register-bottom-grid h3 {
 	color:#5A0F16;
@@ -1075,12 +1075,23 @@ i.white-cart1{
 }
 
 .register-top-grid input[type="text"], .register-bottom-grid input[type="text"] {
-	border: 1px solid #EEE;
-	outline-color:#FF5B36;
-	width: 96%;
-	font-size: 1em;
+	border: 1px solid #c0c0c0;
+	outline-color:#FF6392;
+	width: 40%;
+	font-size:0.8125em;
 	padding: 0.5em;
 }
+
+
+.register-top-grid input[type="password"], .register-bottom-grid input[type="password"]  {
+	border: 1px solid #c0c0c0;
+	outline-color:#FF6392;
+	width: 40%;
+	font-size:0.8125em;
+	padding: 0.5em;
+}
+
+
 .checkbox {
 	margin-bottom: 4px;
 	padding-left: 27px;
@@ -1183,7 +1194,7 @@ div.register-bottom-grid {
 	font-weight:600;
 }
 .login-left p, .login-right p {
-	color: #868583;
+	color: #555555;
 	display: block;
 	font-size: 0.875em;
 	margin: 0 0 2em 0;
@@ -1213,16 +1224,23 @@ div.register-bottom-grid {
 	padding: 0 0 2em 0;
 }
 .login-right span {
-	color: #999;
-	font-size:0.8125em;
+	color: #555555;
+	font-size:20px;
 	padding-bottom: 0.2em;
 	display: block;
 	text-transform: uppercase;
 }
 .login-right input[type="text"] {
-	border: 1px solid #EEE;
+	border: 1px solid #c0c0c0;
 	outline-color:#FF6392;
-	width: 96%;
+	width: 50%;
+	font-size:0.8125em;
+	padding: 0.5em;
+}
+.login-right input[type="password"] {
+	border: 1px solid #c0c0c0;
+	outline-color:#FF6392;
+	width: 50%;
 	font-size:0.8125em;
 	padding: 0.5em;
 }
@@ -1230,7 +1248,7 @@ div.register-bottom-grid {
 	background: #FF6392;
 	color: #FFF;
 	font-size: 1em;
-	padding: 0.7em 1.2em;
+	padding: 0.3em 1.2em;
 	transition: 0.5s all;
 	-webkit-transition: 0.5s all;
 	-moz-transition: 0.5s all;
@@ -1240,6 +1258,7 @@ div.register-bottom-grid {
 	border:none;
 	outline:none;
 }
+
 a.forgot {
 	font-size: 0.875em;
 	margin-right: 11px;
