--- a/DesertSSH/WebContent/css/style.css
+++ b/DesertSSH/WebContent/css/style.css
@@ -5,7 +5,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
 html, body{
-  	font-family: 'Open Sans', sans-serif,Î¢ÈíÑÅºÚ;
+  	font-family: 'Open Sans', sans-serif;
     font-size: 100%;
   	background:#ff8db2;
 }
@@ -34,6 +34,15 @@ body a{
 	float:left;
 	width:40%;
 }
+.top-header-center a{
+	color: #FFF;
+	text-decoration: none;
+	font-size: 1em;
+	font-weight: 100;
+	margin: 0 1.8em 0 0em;
+	padding: 0.5em 0.8em;
+	display: block;
+}
 .top-header-left ul{
 	margin:0;
 	padding:0;
@@ -45,8 +54,8 @@ body a{
 .top-header-left ul li a{
 	color: #FFF;
 	text-decoration: none;
-	font-size: 1.0em;
-	font-weight: 100;
+	font-size: 0.8em;
+	font-weight: 80;
 	margin: 0 1.5em 0 0em;
 	padding: 0.5em 0;
 	display: block;
@@ -458,6 +467,7 @@ a.buy-btn:hover{
 	font-size:1.8em;
 }
 a.btn{
+	
 	background: rgb(78,2,5);
 	background: -moz-radial-gradient(center, ellipse cover, rgb(78,2,5) 0%, rgb(146,59,79) 50%, rgb(78,2,5) 100%);
 	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgb(78,2,5)), color-stop(50%,rgb(146,59,79)), color-stop(100%,rgb(78,2,5)));
