--- a/DesertSSH/WebContent/css/sweetalert.css
+++ b/DesertSSH/WebContent/css/sweetalert.css
@@ -19,8 +19,8 @@ body.stop-scrolling {
 .sweet-alert {
   background-color: white;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  width: 200px;
-  max-height:180px;
+  min-width: 180px;
+  max-height:140px;
   padding: 17px;
   border-radius: 5px;
   text-align: center;
